# LinuxGuard

./: .gitignore  PROJECT_STRUCTURE.md  README.md  config.yaml  environment.yml  setup.py
docs/: ENHANCED_ARCHITECTURE.md
outputs/static_checkers/: CMakeLists.txt  Registration.cpp  checkers_metadata.json  generation_report.md
outputs/static_checkers/checkers/: checker_ap_fallback_000.cpp
reports/: FINAL_PHASE_B_REPORT.md  FINAL_PROJECT_SUMMARY.md  IMPLEMENTATION_REPORT.md  PHASE_B_COMPLETION_REPORT.md
reports/publication/: LinuxGuard_Research_Paper.md  experimental_data_summary.json  submission_checklist.md  supplementary_materials.md
results/: phase_a_evaluation.json  phase_a_evaluation_report.md
results/evaluation/: evaluation_report.md  evaluation_results.json  linux_cves.json
results/expert_validation/: DEPLOYMENT_INSTRUCTIONS.md  experts.json  questions.json  sessions.json  validation_setup_summary.json
results/large_scale/: demo_results.json  large_scale_summary.json  scale_comparison_report.md
results/pattern_analysis/: commit_analyses.json  derivation_report.md  derived_patterns.json  pattern_clusters.json
results/validation/: validation_report.md  validation_results.json
scripts/: evaluation.py  evaluation_main.py  expert_validation_main.py  large_scale_demo.py  large_scale_main.py  main.py  phase_b_main.py  test_simple.py
src/data_collection/: antipattern_filter.py  commit_processor.py  large_scale_processor.py  linux_docs_rag.py
src/evaluation/: performance_evaluator.py
src/pattern_analysis/: clang_generator.py  pattern_derivation.py
(+205 files in other folders)
